[tool.poetry]
name = "concerto-direct"
version = "0.1.0"
description = ""
authors = ["shiburizu"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.6.*"

[tool.poetry.dev-dependencies]
pywinpty = "^0.5.7"
Kivy = "^2.0.0"
pyinstaller = "^4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
